# lerobot

./: create_dataset.py  data.txt  data_stat.py  data_vis.py  inference.py  inference_origin.py  inference_stat.py  pyproject.toml  resnet18_test.py  test_robot_simulator.py  udp_socket.py  video_stat.py
curi_udp-main/: README.md
curi_udp-main/c/: CMakeLists.txt  curi_udp.c  curi_udp.h  local.c  remote.c
curi_udp-main/python/: host1.py  host2.py
lerobot/common/robot_devices/robots/: configs.py  utils.py
scripts/: train.sh  train_act.sh  train_dp.sh  vis_dataset.sh
